--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
     ],
     "require": {
         "php": "^8.1|^8.2",
-        "spatie/laravel-package-tools": "^1.14.0",
-        "illuminate/contracts": "^10.0 || ^11.0 || ^12.0"
+        "illuminate/contracts": "^10.0 || ^11.0 || ^12.0",
+        "league/iso3166": "^4.3",
+        "spatie/laravel-package-tools": "^1.14.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
